samples/_failures_safe/1761532300_279fc6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_8557da0e.c: In function ‘main’:
./samples/SAFE/__tmp_8557da0e.c:159:5: error: expected expression at end of input
  159 |     return
      |     ^~~~~~
./samples/SAFE/__tmp_8557da0e.c:159:5: error: expected declaration or statement at end of input
